--- a/views/root.slim
+++ b/views/root.slim
@@ -1,4 +1,4 @@
-form action='/tour-data' method='get'
+form action='/tourdata' method='get'
   input type='text' id='id' name='id'
   button type='submit' Search
 div id='map-canvas'
