--- a/views/home.slim
+++ b/views/home.slim
@@ -42,20 +42,29 @@ nav class="navbar navbar-inverse"
         a href="#" class="navbar-link" osckar skrub
 
 div class='dropdown'
-  button class='btn btn-default dropdown-toggle' type='button' id='dropdownMenu' data-toggle='dropdown' aria-expanded='true' 
+  button class='btn btn-default dropdown-toggle' type='button' id='dropdown-menu' data-toggle='dropdown' aria-expanded='true' 
     i class='fa fa-bars'
-  ul class='dropdown-menu' role='menu' aria-lebelledby='dropdownMenu'
+  ul class='dropdown-menu' role='menu' aria-lebelledby='dropdown-menu'
     li role='presentation'
-      a class='menutitle' role='menuitem' tabindex='-1' href='#'
+      a class='menutitle turquoise-border-b' role='menuitem' tabindex='-1' href='#'
         i class='fa fa-bookmark' #{' My Map'}
-      a role='menuitem' tabindex='-1' href='#' View Tours
-      a role='menuitem' tabindex='-1' href='#' View Pins
-      a role='menuitem' tabindex='-1' href='#' Images
-      a role='menuitem' tabindex='-1' href='#' Search
-      a class='menutitle' role='menuitem' tabindex='-1' href='#' 
+      .turquoise-border
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' View Tours
+      .turquoise-border
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' View Pins
+      .turquoise-border      
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Images
+      .turquoise-border
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Search
+      .turquoise-border 
+      a class='menutitle turquoise-border-b' role='menuitem' tabindex='-1' href='#' 
         i class='fa fa-map-marker' #{' Tours'}
-      a role='menuitem' tabindex='-1' href='#' Preview
-      a role='menuitem' tabindex='-1' href='#' Create
-      a role='menuitem' tabindex='-1' href='#' Search
+      .turquoise-border
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Preview
+      .turquoise-border
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Create
+      .turquoise-border 
+      a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Search
+      .turquoise-border 
       a class='menutitle' role='menuitem' tabindex='0' href='#'
         i class='fa fa-picture-o' #{' Upload'}
