--- a/public/css/dropdownmenu.css
+++ b/public/css/dropdownmenu.css
@@ -14,6 +14,10 @@
   background-color: #313237;
 }
 
+#dropdown-menu {
+  margin-top:7px;
+}
+
 .dropdown-menu li a {
   color:white;
   margin-top:0;
