--- a/views/home.slim
+++ b/views/home.slim
@@ -38,10 +38,11 @@ nav class="navbar navbar-inverse"
               .turquoise-border 
               a class='menutitle' role='menuitem' tabindex='0' href='#'
                 i class='fa fa-picture-o' #{' Upload'}
-      form class="navbar-form navbar-left" role="search"
+
+      form action='/tourdata' method='get' class="navbar-form navbar-left" role="search"
         div class="form-group"
-          input type="text" class="form-control" placeholder="search"
-        button type="submit" class="btn btn-default" Submit
+          input type="text" class="form-control" placeholder="Search" id='id' name='name'
+        button type="submit" class="btn btn-default" id='search-tour' Submit
 
 
       ul class="nav navbar-nav navbar-right"
@@ -56,5 +57,7 @@ nav class="navbar navbar-inverse"
             li
               a href="#" Action3
       p class="navbar-text navbar-right"
-        a href="#" class="navbar-link" osckar skrub
+        a href="#" class="navbar-link" Lukas Antonino Alexander Michanek
+
+div id='map-canvas'
 
