--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,3 +1,9 @@
 .navbar-inverse {
-  background-color: #00D6D8;
+  background-color: #313237;
+  border-radius: 0px;
+  margin-bottom:0;
+}
+
+.navbar-inverse .navbar-link {
+  color:white;
 }
