--- a/public/css/design.css
+++ b/public/css/design.css
@@ -1,5 +1,9 @@
 html, body, #map-canvas {
   height: 100%;
   margin: 0px;
-  padding: 0px
+  padding: 0px;
+}
+
+body {
+  background-color: #313237;
 }
