--- a/public/css/dropdownmenu.css
+++ b/public/css/dropdownmenu.css
@@ -2,16 +2,17 @@
   background-color: #313237;
 }
 
+#menu {
+  background-color: #313237;
+  margin-top: 50px;
+}
+
 .fa-bars:hover {
   color: #00D6D8;
 }
 
 .fa-bars {
   color: white;
-}
-
-.dropdown-menu {
-  background-color: #313237;
 }
 
 #dropdown-menu {
