Removed unused class

--- a/views/home.slim
+++ b/views/home.slim
@@ -40,22 +40,22 @@ div id='menu' class='col-md-2'
     a class='menutitle turquoise-border-b' role='menuitem' tabindex='-1' href='#'
       i class='fa fa-bookmark' #{' My Map'}
     .turquoise-border
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' View Tours
+    a role='menuitem' tabindex='-1' href='#' View Tours
     .turquoise-border
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' View Pins
+    a role='menuitem' tabindex='-1' href='#' View Pins
     .turquoise-border      
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Images
+    a role='menuitem' tabindex='-1' href='#' Images
     .turquoise-border
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Search
+    a role='menuitem' tabindex='-1' href='#' Search
     .turquoise-border 
-    a class='menutitle turquoise-border-b' role='menuitem' tabindex='-1' href='#' 
+    a role='menuitem' tabindex='-1' href='#' 
       i class='fa fa-map-marker' #{' Tours'}
     .turquoise-border
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Preview
+    a role='menuitem' tabindex='-1' href='#' Preview
     .turquoise-border
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Create
+    a role='menuitem' tabindex='-1' href='#' Create
     .turquoise-border 
-    a class='turquoise-border-b' role='menuitem' tabindex='-1' href='#' Search
+    a role='menuitem' tabindex='-1' href='#' Search
     .turquoise-border 
     a class='menutitle' role='menuitem' tabindex='0' href='#'
       i class='fa fa-picture-o' #{' Upload'}
