Added username color setting and some restyling

--- a/views/settings.slim
+++ b/views/settings.slim
@@ -1,9 +1,10 @@
-.panel.panel-default
+.panel.panel-default.col-md-8.col-md-offset-2
   .panel-heading Settings
   .panel-body
     .dropdown
+      |Language: 
       button#dropdownMenu1.btn.btn-default.dropdown-toggle aria-expanded="true" data-toggle="dropdown" type="button"
-        | Language
+        |swinglish
         span.caret
       ul.dropdown-menu aria-labelledby="dropdownMenu1" role="menu"
         li role="presentation"
@@ -17,6 +18,20 @@
       button.btn.btn-default type="button"  2
       button.btn.btn-default type="button"  3
       button.btn.btn-default type="button"  4
+
+
+    .dropdown
+      |Username color:
+      button#dropdownMenu1.btn.btn-default.dropdown-toggle aria-expanded="true" data-toggle="dropdown" type="button"
+        |White
+        span.caret
+      ul.dropdown-menu aria-labelledby="dropdownMenu1" role="menu"
+        li role="presentation"
+          a href="#" role="menuitem" tabindex="-1"  Blue
+        li role="presentation"
+          a href="#" role="menuitem" tabindex="-1"  Red
+        li role="presentation"
+          a href="#" role="menuitem" tabindex="-1"  Green
 
 
 
