--- a/views/home.slim
+++ b/views/home.slim
@@ -27,11 +27,11 @@ nav class="navbar navbar-inverse"
             span class="caret"
           ul class="dropdown-menu" role="menu"
             li
-              a href="#" Action
+              a href="#" Profile
             li
-              a href="#" Action2
+              a id='settingbutton' href="#" Settings
             li
-              a href="#" Action3
+              a href="#" Logout
       p class="navbar-text navbar-right"
         a href="#" class="navbar-link" Lukas Antonino Alexander Michanek
 
@@ -60,4 +60,8 @@ div id='menu' class='col-md-2'
     a class='menutitle' role='menuitem' tabindex='0' href='#'
       i class='fa fa-picture-o' #{' Upload'}
 div id='map-canvas' class='col-md-12'
+
+div id='overlay'
+div id='settings' class='col-md-8 col-md-offset-2'
+  button id='closesetting'
 
