--- a/views/home.slim
+++ b/views/home.slim
@@ -29,7 +29,7 @@ nav class="navbar navbar-inverse"
             li
               a href="#" Profile
             li
-              a id='settingbutton' href="#" Settings
+              a class='settings-toggler' href="#" Settings
             li
               a href="#" Logout
       p class="navbar-text navbar-right"
@@ -61,7 +61,7 @@ div id='menu' class='col-md-2'
       i class='fa fa-picture-o' #{' Upload'}
 div id='map-canvas' class='col-md-12'
 
-div id='overlay'
+div id='overlay' class='settings-toggler'
 div id='settings' class='col-md-8 col-md-offset-2'
-  button id='closesetting'
+  button class='settings-toggler'
 
