--- a/views/settings.slim
+++ b/views/settings.slim
@@ -1,8 +1,23 @@
 .panel.panel-default.col-md-8.col-md-offset-2
   .panel-heading Settings
   .panel-body
+
+    |Change mail:
+    .input-group
+      input.form-control aria-describedby="basic-addon2" placeholder="Current email" type="email"
+    .input-group
+      input.form-control aria-describedby="basic-addon2" placeholder="Change email" type="email"
+
+    |Change password:
+    .input-group
+      input.form-control aria-describedby="basic-addon2" placeholder="Current password" type="password"
+    .input-group
+      input.form-control aria-describedby="basic-addon2" placeholder="New password" type="password"
+    .input-group
+      input.form-control aria-describedby="basic-addon2" placeholder="confirm new password" type="password"
+
     .dropdown
-      |Language: 
+      |Language:
       button#dropdownMenu1.btn.btn-default.dropdown-toggle aria-expanded="true" data-toggle="dropdown" type="button"
         |swinglish
         span.caret
@@ -19,7 +34,6 @@
       button.btn.btn-default type="button"  3
       button.btn.btn-default type="button"  4
 
-
     .dropdown
       |Username color:
       button#dropdownMenu1.btn.btn-default.dropdown-toggle aria-expanded="true" data-toggle="dropdown" type="button"
@@ -32,6 +46,12 @@
           a href="#" role="menuitem" tabindex="-1"  Red
         li role="presentation"
           a href="#" role="menuitem" tabindex="-1"  Green
+
+    .btn-group aria-label="..." role="group"
+      button.btn.btn-default type="button"  Discard
+    .btn-group aria-label="..." role="group"
+      button.btn.btn-default type="button"  Save
+
 
 
 
