--- a/views/settings.slim
+++ b/views/settings.slim
@@ -14,12 +14,12 @@
     .input-group
       input.form-control aria-describedby="basic-addon2" placeholder="New password" type="password"
     .input-group
-      input.form-control aria-describedby="basic-addon2" placeholder="confirm new password" type="password"
+      input.form-control aria-describedby="basic-addon2" placeholder="Confirm password" type="password"
 
     .dropdown
       |Language:
       button#dropdownMenu1.btn.btn-default.dropdown-toggle aria-expanded="true" data-toggle="dropdown" type="button"
-        |swinglish
+        |Swinglish
         span.caret
       ul.dropdown-menu aria-labelledby="dropdownMenu1" role="menu"
         li role="presentation"
