Responsive feedback for menu items Fixed #27

--- a/views/home.slim
+++ b/views/home.slim
@@ -48,7 +48,7 @@ div id='menu' class='col-md-2'
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' Search
     .turquoise-border 
-    a role='menuitem' tabindex='-1' href='#' 
+    a class='menutitle' role='menuitem' tabindex='-1' href='#' 
       i class='fa fa-map-marker' #{' Tours'}
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' Preview
