--- a/public/css/dropdownmenu.css
+++ b/public/css/dropdownmenu.css
@@ -8,27 +8,22 @@
   display: none;
 }
 
-.fa-bars:hover {
-  color: #00D6D8;
-}
-
-.fa-bars {
-  color: white;
-}
-
 #dropdown-menu {
   margin-top:7px;
 }
-
-.dropdown-menu li a {
+li[role="presentation"] {
+  text-align: center;
+}
+.dropdown-menu li a, #menu li a {
   color:white;
   margin-top:0;
   margin-bottom:0;
 }
 
-.dropdown-menu li a:hover {
+.dropdown-menu li a:hover, #menu li a:hover {
   background-color: #313237;
   color: #00D6D8;
+  text-decoration: none;
 }
 
 .dropdown-menu li a {
@@ -41,6 +36,18 @@
     height: 1px;
     background-image: radial-gradient(#00D6D8, #313237), radial-gradient(#00D6D8, #313237);
     background-position: 0, 100%, 0, 100%;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    margin-bottom: 12.5px;
+    margin-top: 12.5px;
+}
+
+#menu .menutitle {
+  font-size: 19px;
+}
+
+.fa-bars:hover {
+  color: #00D6D8;
+}
+
+.fa-bars {
+  color: white;
 }
