Linked CSS file

--- a/views/layout.slim
+++ b/views/layout.slim
@@ -6,6 +6,7 @@ html
     link rel='stylesheet' type='text/css' href='/css/dropdownmenu.css'
     link rel='stylesheet' type='text/css' href='/css/navbar.css'
     link rel='stylesheet' type='text/css' href='/css/settings.css'
+    link rel='stylesheet' type='text/css' href='/css/login.css'
     link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"
     script src="https://maps.googleapis.com/maps/api/js?v=3.exp"
