--- a/views/login.slim
+++ b/views/login.slim
@@ -15,7 +15,7 @@ div class="center-block main-block"
   div id="status-rectangle"
     div class="col-lg-6 col-lg-offset-3"
       div id="info"
-        h1 class="text-center" 7
+        h1 class="text-center" #{@users_registered}
         p class="text-center" accounts
     div class="col-lg-10 col-lg-offset-1"
       button id="register-button" type="submit" class="btn btn-default" Register
