fixed user icon Fixes #28

--- a/views/home.slim
+++ b/views/home.slim
@@ -34,6 +34,9 @@ nav class="navbar navbar-inverse"
               a href="#" Logout
       p class="navbar-text navbar-right"
         a href="#" class="navbar-link" Lukas Antonino Alexander Michanek
+      a class="navbar-brand navbar-right" href="#"
+        i.fa.fa-user
+
 
 div id='menu' class='col-md-2'
   li role='presentation'
