--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -7,3 +7,7 @@
 .navbar-inverse .navbar-link {
   color:white;
 }
+
+.dropdown-menu, .dropdown-toggle[aria-expanded='true'] {
+  background-color: #313237 !important;
+}
