Centered main searchbar

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -11,3 +11,7 @@
 .dropdown-menu, .dropdown-toggle[aria-expanded='true'] {
   background-color: #313237 !important;
 }
+
+#main-searchbar {
+  margin-left: 27%;
+}
