--- a/views/home.slim
+++ b/views/home.slim
@@ -15,11 +15,10 @@ nav class="navbar navbar-inverse"
           button class='btn btn-default dropdown-toggle' type='button' id='dropdown-menu' data-toggle='dropdown' aria-expanded='true' 
             i class='fa fa-bars'
 
-      form action='/tourdata' method='get' class="navbar-form navbar-left" role="search"
+      form id='main-searchbar' searchaction='/tourdata' method='get' class="navbar-form navbar-left" role="search"
         div class="form-group"
           input type="text" class="form-control" placeholder="Search" id='id' name='name'
         button type="submit" class="btn btn-default" id='search-tour' Submit
-
 
       ul class="nav navbar-nav navbar-right"
         li class="dropdown"
