--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,11 +8,12 @@ html
     link rel='stylesheet' type='text/css' href='/css/settings.css'
     link rel='stylesheet' type='text/css' href='/css/login.css'
     link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
+  body
+    == yield
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"
     script src="https://maps.googleapis.com/maps/api/js?v=3.exp"
     script src="js/maps.js"
-  body
-    == yield
     script src="/js/bootstrap.js"
+    script src="/js/jquery.jeditable.mini.js"
     script src="js/menu.js"
     script src="js/login.js"
