--- a/views/home.slim
+++ b/views/home.slim
@@ -32,7 +32,7 @@ nav class="navbar navbar-inverse"
             li
               a href="#" Logout
       p class="navbar-text navbar-right"
-        a href="#" class="navbar-link" Lukas Antonino Alexander Michanek
+        a href="#" class="navbar-link" #{@user.username}
       a class="navbar-brand navbar-right" href="#"
         i.fa.fa-user
 
