--- a/views/layout.slim
+++ b/views/layout.slim
@@ -13,6 +13,6 @@ html
     script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"
     script src="https://maps.googleapis.com/maps/api/js?v=3.exp"
     script src="js/maps.js"
-    script src="/js/bootstrap.js"
+    script src="js/bootstrap.js"
     script src="js/menu.js"
     script src="js/login.js"
