--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    meta name="viewport" content="width=device-width, initial-scale=1"
     link rel='stylesheet' type='text/css' href='/css/bootstrap.css'
     link rel='stylesheet' type='text/css' href='/css/design.css'
     link rel='stylesheet' type='text/css' href='/css/dropdownmenu.css'
