--- a/views/home.slim
+++ b/views/home.slim
@@ -72,9 +72,9 @@ div id='overlay' class='settings-toggler'
       |Change mail:
       .email
         .input-group id="change-email"
-          input.form-control name="new-email" placeholder="Current email" type="email"
+          input.form-control name="current-email" placeholder="Current email" type="email"
         .input-group
-          input.form-control name="current-email" placeholder="Change email" type="email"
+          input.form-control name="new-email" placeholder="Change email" type="email"
 
       |Change password:
       .change-password
@@ -99,9 +99,9 @@ div id='overlay' class='settings-toggler'
       /      a role="menuitem" tabindex="-1" value="green" Green
 
       select.form-control name="color"
-        option value="blue" blue
-        option value="red" red
-        option value="green" green
+        option value="1" blue
+        option value="2" red
+        option value="3" green
 
 
       |Zoom level:
@@ -111,7 +111,6 @@ div id='overlay' class='settings-toggler'
         option value="3" 3
         option value="4" 4
 
-
       .confirm-buttons
-        button.btn.btn-primary type="submit" Discard
+        button.btn.btn-primary type="reset" Discard
         button.btn.btn-primary type="submit" Save
