--- a/views/home.slim
+++ b/views/home.slim
@@ -89,16 +89,17 @@ div id='overlay' class='settings-toggler'
       select.form-control name="color"
         - for color in @colors
           - if color.id == @user.setting.color.id
-            option selected="" value="#{color.id}"  #{color.name}
+            option selected="" value="#{color.id}" #{color.name}
           - else
             option value="#{color.id}" #{color.name}
 
       |Zoom level:
       select.form-control name="zoom-level"
-        option value="1" 1
-        option value="2" 2
-        option value="3" 3
-        option value="4" 4
+        - for i in 1..4
+          - if i == @user.setting.zoom_level
+            option selected="" value="#{i}" #{i}
+          - else
+            option value="#{i}" #{i}
 
       .confirm-buttons
         button.btn.btn-primary type="reset" Discard
