Preventing redirection and sending post Fixes #59

--- a/views/home.slim
+++ b/views/home.slim
@@ -72,21 +72,21 @@ div id='overlay' class='settings-toggler'
       |Change mail:
       .email
         .input-group id="change-email"
-          input.form-control name="current-email" placeholder="Current email" type="email"
+          input.form-control name="current-email" id='current-email' placeholder="Current email" type="email"
         .input-group
-          input.form-control name="new-email" placeholder="Change email" type="email"
+          input.form-control name="new-email" id='new-email' placeholder="Change email" type="email"
 
       |Change password:
       .change-password
         .input-group id="change-password"
-          input.form-control name="current-password" placeholder="Current password" type="password"
+          input.form-control name="current-password" id='current-password' placeholder="Current password" type="password"
         .input-group id="change-password"
-          input.form-control name="new-password" placeholder="New password" type="password"
+          input.form-control name="new-password" id='new-password' placeholder="New password" type="password"
         .input-group
-          input.form-control name="confirm-password" placeholder="Confirm password" type="password"
+          input.form-control name="confirm-password" id='confirm-password' placeholder="Confirm password" type="password"
 
       |Username color:
-      select.form-control name="color"
+      select.form-control name="color" id='color'
         - for color in @colors
           - if color.id == @user.setting.color.id
             option selected="" value="#{color.id}" #{color.name}
@@ -94,7 +94,7 @@ div id='overlay' class='settings-toggler'
             option value="#{color.id}" #{color.name}
 
       |Zoom level:
-      select.form-control name="zoom-level"
+      select.form-control name="zoom-level" id='zoom-level'
         - for i in 1..4
           - if i == @user.setting.zoom_level
             option selected="" value="#{i}" #{i}
@@ -103,4 +103,4 @@ div id='overlay' class='settings-toggler'
 
       .confirm-buttons
         button.btn.btn-primary type="reset" Discard
-        button.btn.btn-primary type="submit" Save
+        button.btn.btn-primary id="settings-submit" type="submit" Save
