fixed scaling error with profile page fixes #62

--- a/views/profilepage.slim
+++ b/views/profilepage.slim
@@ -1,7 +1,7 @@
 div id="background"
   div id="profilepic" class="col-md-4"
     img src="/images/profile_placeholder.png"
-  div class="page-header" id="informationbox"
+  div class="page-header" id="informationbox" class="col-md-4"
     h1
       | #{@user.name} 
       small Registered: 2014-03-21
