--- a/views/home.slim
+++ b/views/home.slim
@@ -6,7 +6,7 @@ nav class="navbar navbar-inverse"
         span class="icon-bar"
         span class="icon-bar"
         span class="icon-bar"
-      a class="navbar-brand" href="#"
+      a class="navbar-brand" href="/home"
         img alt="brand" src="/images/pinme.png"
 
     div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"
