--- a/views/home.slim
+++ b/views/home.slim
@@ -56,7 +56,7 @@ div id='menu' class='col-md-2'
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' Create
     .turquoise-border 
-    a role='menuitem' tabindex='-1' href='#' Search
+    a role='menuitem' tabindex='-1' href='/findtour' Search
     .turquoise-border 
     a class='menutitle' role='menuitem' tabindex='0' href='#'
       i class='fa fa-picture-o' #{' Upload'}
