--- a/views/findtour.slim
+++ b/views/findtour.slim
@@ -1,1 +1,18 @@
-p hello world
+.container
+
+  - for tour in @tours
+    .col-xs-6.col-sm-6.col-md-3.col-lg-3
+      .thumbnail
+        img.img-responsive alt="" src="" /
+        .caption
+          h3 #{tour.name}
+          p #{tour.description}
+          p #{tour.rating}
+          p
+            a.btn.btn-primary.btn-block href="/tour/#{tour.id}"
+              i.icon-link.icon-x2
+              | Read more
+
+.confirm-buttons
+ button.btn.btn-primary href="/findtour" Previous Page
+ button.btn.btn-primary href="/findtour" Next Page
