--- a/views/findtour.slim
+++ b/views/findtour.slim
@@ -3,7 +3,7 @@
   - for tour in @tours
     .col-xs-6.col-sm-6.col-md-3.col-lg-3
       .thumbnail
-        img.img-responsive alt="" src="" /
+        img.img-responsive alt="" src="http://placekitten.com/g/500/500" /
         .caption
           h3 #{tour.name}
           p #{tour.description}
@@ -14,5 +14,7 @@
               | Read more
 
 .confirm-buttons
- button.btn.btn-primary href="/findtour" Previous Page
- button.btn.btn-primary href="/findtour" Next Page
+  form action="/findtour/#{@sidenumber.to_i - 1}"
+    button.btn.btn-primary type="submit" Previous Page
+  form action="/findtour/#{@sidenumber.to_i + 1}"
+    button.btn.btn-primary type="submit" Next Page
