--- a/public/css/design.css
+++ b/public/css/design.css
@@ -13,3 +13,12 @@ body {
     width :100%;
     height: 100%;
 }
+
+.hidden {
+  visibility: hidden;
+}
+
+#profile {
+  display: none;
+  color: white;
+}
