Logout now supported Fixes #77

--- a/views/home.slim
+++ b/views/home.slim
@@ -30,7 +30,7 @@ nav class="navbar navbar-inverse"
             li
               a class='settings-toggler' href="#" Settings
             li
-              a href="#" Logout
+              a href="/logout" Logout
       p class="navbar-text navbar-right collapsing-element"
         a href="#" class="navbar-link" #{@user.username}
       a class="navbar-brand navbar-right collapsing-element" href="#"
