--- a/views/home.slim
+++ b/views/home.slim
@@ -54,13 +54,18 @@ div id='menu' class='col-md-2'
     .turquoise-border 
     
 div id='map-canvas' class='col-md-12'
-div id='profile'
-  div id="profilepic" class="col-md-4"
+div id='profile' class='col-md-10'
+  div id="profile-summary" class="col-md-4 panel panel-default"
     img src="/images/profile_placeholder.png"
-  div class="page-header" id="informationbox" class="col-md-4"
+    div class='panel-body'  
+      h2 = "#{@user.first_name} #{@user.last_name}"
+      h4 Expert Tour Creator
+      p Pellenteqsue elementum dapibus convalis elementum pellenteqsue tour.
+  div class="page-header" id="informationbox" class="col-md-7 col-md-offset-1 panel panel-default" style='background-color:white'
     h1
       | #{@user.name} 
-      small Registered: 2014-03-21
+      small 2014-03-21
+    p Mauris sit amet ex nibh. Suspendisse id iaculis risus. Suspendisse vel felis id felis maximus convallis id sed magna. Donec pellentesque purus a leo sollicitudin pellentesque. Nam ultrices massa at lectus pulvinar, ut euismod sapien cursus. Sed sodales commodo urna in varius. Pellentesque sodales nulla sed mattis viverra. Donec ultricies libero id leo venenatis tristique quis sed lorem. Sed ut sollicitudin metus. Ut egestas pellentesque nulla, ut tempus dui venenatis sed. Mauris malesuada mauris sed dui bibendum eleifend. Curabitur scelerisque aliquam lectus, eget mollis massa bibendum in. Proin sit amet mauris in nisl maximus volutpat ut eu eros. Duis elementum efficitur luctus. Nunc accumsan arcu id hendrerit tincidunt. Etiam iaculis ac nunc eget sagittis.
 
 div id='overlay' class='settings-toggler'
 
