--- a/views/layout.slim
+++ b/views/layout.slim
@@ -9,6 +9,7 @@ html
     link rel='stylesheet' type='text/css' href='/css/settings.css'
     link rel='stylesheet' type='text/css' href='/css/login.css'
     link rel='stylesheet' type='text/css' href='/css/findtour.css'
+    link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'
     link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"
   body
     == yield
