Redesign of navbar

--- a/views/home.slim
+++ b/views/home.slim
@@ -38,15 +38,18 @@ nav class="navbar navbar-inverse"
 
 div id='menu' class='col-md-2'
   li role='presentation'
-    a class='menutitle turquoise-border-b' role='menuitem' tabindex='-1' href='#' id='menu-map'
-      i class='fa fa-bookmark' #{' My Map'}
+    a role='menuitem' tabindex='-1' href='#' id='menu-map'
+      i class='fa fa-bookmark'
+      |  My Map
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' View Tours
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' Search
     .turquoise-border 
-    a class='menutitle' role='menuitem' tabindex='-1' href='#' 
-      i class='fa fa-map-marker' #{' Tours'}
+    a role='menuitem' tabindex='-1' href='#'
+      i class='fa fa-map-marker'
+      |  Tours 
+      
     .turquoise-border
     a role='menuitem' tabindex='-1' href='#' Create
     .turquoise-border 
