User validations Fixes #83

--- a/views/login.slim
+++ b/views/login.slim
@@ -54,4 +54,5 @@ div class="center-block main-block"
       button id="create-account-button" type="submit" class="btn btn-default" Sign up!
   -if flash[:error]
     div class='flash-error col-md-12'
-      p #{flash[:error]}
+      -for error in flash[:error]
+        p #{error}
